build: auth working and patient page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
-    --blue50: 200 100% 97%;
+    --blue50: 200 100% 97% / .6;
     --blue100: 200 94% 94%;
     --blue200: 200 94% 86%;
     --blue300: 199 95% 74%;
