feat: color variants done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,21 +7,15 @@
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
-    --blue50: 200 100% 97% / .6;
-    --blue100: 200 94% 94%;
-    --blue200: 200 94% 86%;
-    --blue300: 199 95% 74%;
-    --blue400: 199 93% 60%;
-    --blue500: 199 89% 48%;
-    --blue600: 199 98% 39%;
-    --blue700: 199 96% 32%;
-    --blue800: 200 90% 27%;
-    --blue900: 200 80% 24%;
-    --blue950: 199 80% 16%;
+    /* 
+    old
+    --skyBlue: 189.74 100% 62.55%;
+    --primaryBlue: 195.73 86.55% 53.33%;
+    */
 
-    --transparent1: 0 0% 100% / .5;
-    --transparent2: 196 93% 95% / 0.5;
-    --transparent4: 199 93% 60% / 0.1;
+    --skyBlue: 194.87 100% 54.9%;
+    --primaryBlue: 208.86 86.05% 57.84%;
+    --darkBlue: 213.85 89.34% 52.16%;
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
